test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/shadowing_in_reexporting_module/src/lib_4.sw
library;

pub use ::items_4_1::*;
pub use ::items_4_1::Items4_Variants::*;

use ::items_4_2::Items4_Struct;
use ::items_4_2::Items4_Enum;
use ::items_4_2::Items4_Variants;
use ::items_4_2::Items4_Variants::K;
use ::items_4_2::Items4_Variants::L;
use ::items_4_2::ITEMS_4_FUNCTION_RES;
use ::items_4_2::items_4_function;
use ::items_4_2::Items4Trait;

pub use ::items_4_3::Items4_Variants2::*;
use ::items_4_4::Items4_Variants2::M;
use ::items_4_4::Items4_Variants2::N;
